atlassian/atlassian-dc/bitbucket/bitbucket-node2.yaml
apiVersion: v1    # bitbucket Deployment for node 1
kind: Pod
metadata:
  labels:
    app: bitbucket
  name: bitbucket-node2
spec:
  containers:
    - name: bitbucket-node2
      image: "agiletrailblazers/bitbucket-server:7.2.3"
      ports:
        - containerPort: 7990
        - containerPort: 7999
      resources:
        limits:
          cpu: "4"
          memory: "12G"
        requests:
          cpu: "2"
          memory: "6G"
      volumeMounts:
        - name: "bitbucket-home"
          mountPath: /var/atlassian/application-data/bitbucket
        - name: "bitbucket-shared-home"
          mountPath: /var/atlassian/application-data/bitbucket/shared
  volumes:
    - name: bitbucket-home
      persistentVolumeClaim:
        claimName: bitbucket-home-node2-pv-claim
    - name: bitbucket-shared-home
      persistentVolumeClaim:
        claimName: bitbucket-shared-home-pv-claim
---           #Provide authorization for confluence
apiVersion: rbac.authorization.k8s.io/v1beta1
kind: ClusterRoleBinding
metadata:
  name: bitbucket-k8-calls
subjects:
  - kind: ServiceAccount
    # Reference to upper's `metadata.name`
    name: default
    # Reference to upper's `metadata.namespace`
    namespace: bitbucket
roleRef:
  kind: ClusterRole
  name: cluster-admin
  apiGroup: rbac.authorization.k8s.io
