atlassian/atlassian-dc/bitbucket/bitbucket-postgres.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bitbucket-postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bitbucket-postgres
    spec:
      containers:
        - name: bitbucket-postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: bitbucket-postgres-pv-claim
