atlassian/atlassian-dc/bitbucket/bitbucket-service.yaml
apiVersion: v1                #confluence Service
kind: Service
metadata:
  name: bitbucket-service
  labels:
    app: bitbucket-service
spec:
  type: NodePort
  ports:
   - port: 7990
  selector:
   app: bitbucket
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 600
---
apiVersion: v1                #PostgreSQL Service
kind: Service
metadata:
  name: bitbucketdb-service
  labels:
    app: bitbucket-postgres
spec:
  type: NodePort
  ports:
   - port: 5432
  selector:
   app: bitbucket-postgres
